<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.3.2</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <repositories>
    <repository>
      <id>confluent</id>
      <url>https://packages.confluent.io/maven/</url>
    </repository>
  </repositories>

  <groupId>org.finance</groupId>
  <artifactId>stock-app</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>stock-app</name>
  <description>Stock Application Parent</description>
  <properties>
    <java.version>21</java.version>
    <spring-cloud.version>2023.0.3</spring-cloud.version>
    <avro.version>1.11.3</avro.version>
    <spring-kafka.version>3.2.2</spring-kafka.version>
    <kafka-avro-serializer.version>7.6.0</kafka-avro-serializer.version>
    <spring-retry.version>2.0.5</spring-retry.version>
    <spring-aspects.version>6.1.5</spring-aspects.version>
    <jib-maven-plugin-version>3.4.1</jib-maven-plugin-version>
    <jib-maven-plugin.image>
      eclipse-temurin:21-jre@sha256:33c033fbc177c46ae097fc01575e6a0df665dbecc49d1cff2227b969672697cb
    </jib-maven-plugin.image>
    <jib-base-path>org.finance.stockapp</jib-base-path>
    <jackson-module-version>2.17.0</jackson-module-version>
    <logback-classic-version>1.4.14</logback-classic-version>
    <logstash-logback-encoder-version>7.4</logstash-logback-encoder-version>
  </properties>


  <modules>
    <module>config-service</module>
    <module>discovery-service</module>
    <module>gateway-service</module>
    <module>stock-data-service</module>
    <module>stock-quote-producer</module>
    <module>message-queue-lib</module>
    <module>stock-quote-consumer</module>
    <module>common-lib</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <!-- LOCAL -->
      <dependency>
        <groupId>org.finance</groupId>
        <artifactId>app-config-data</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.finance</groupId>
        <artifactId>common-config</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.finance</groupId>
        <artifactId>common-payload</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.finance</groupId>
        <artifactId>common-security</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.message.queue</groupId>
        <artifactId>kafka-model</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.message.queue</groupId>
        <artifactId>kafka-producer</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.message.queue</groupId>
        <artifactId>kafka-admin</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.message.queue</groupId>
        <artifactId>kafka-consumer</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring-cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.avro</groupId>
        <artifactId>avro</artifactId>
        <version>${avro.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.kafka</groupId>
        <artifactId>spring-kafka</artifactId>
        <version>${spring-kafka.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.retry</groupId>
        <artifactId>spring-retry</artifactId>
        <version>${spring-retry.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-aspects</artifactId>
        <version>${spring-aspects.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.module</groupId>
        <artifactId>jackson-module-jsonSchema</artifactId>
        <version>${jackson-module-version}</version>
      </dependency>

      <dependency>
        <groupId>net.logstash.logback</groupId>
        <artifactId>logstash-logback-encoder</artifactId>
        <version>${logstash-logback-encoder-version}</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>${logback-classic-version}</version>
      </dependency>

      <dependency>
        <groupId>io.confluent</groupId>
        <artifactId>kafka-avro-serializer</artifactId>
        <version>${kafka-avro-serializer.version}</version>
        <exclusions>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
          </exclusion>
          <exclusion>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
          </exclusion>
          <exclusion>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-annotations</artifactId>
          </exclusion>
          <exclusion>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-core</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
    </dependencies>
  </dependencyManagement>


  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>


</project>
